--- a/web/public/style.css
+++ b/web/public/style.css
@@ -3,17 +3,20 @@
 
 *, *::after, *::before {
     box-sizing: border-box  ;
-}
-.first_display {
-    background: linear-gradient(90deg, #1E1E1E 0%, rgba(0, 0, 0, 0.00) 100%),
-                url(back_image-coffee.jpeg) no-repeat center center / cover;
-    height: fit-content;
+    font-family: Playfair Display;
+
 }
 
 body {
     height: 3120px;
     margin: 0;
+
 }
+.background-1 {
+    background: linear-gradient(90deg, #1E1E1E 0%, rgba(0, 0, 0, 0.00) 60%),
+                url(section_firstDisplay/back_image-coffee.jpeg) no-repeat center center / cover;
+}
+
 header {
     display: flex;
     justify-content: space-between;
@@ -23,9 +26,7 @@ header {
 .wrap_header {
     width: 100%;
     height: 120px;
-    flex-shrink: 1;
     background: rgba(217, 217, 217, 0.00);
-    /* mix-blend-mode: overlay; */
 }
 
 header a {
@@ -39,36 +40,153 @@ header .logo p {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    text-align: center;
 }
 
-header a p {
-    margin-top: 31px;
+header .logo {
     margin-left: 116px;
 }
+
 .links {
     margin-top: 48px;
     margin-right: 116px;
+    white-space: nowrap;
+
 }
 
 .links a {
     margin-left: 20px;
-    font-family: Playfair Display;
+    /* font-family: Playfair Display; */
     color: #FFF;
     text-align: center;
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-
+    white-space: nowrap;
 }
 
-/* MAIN CONTENT */
-
-
-main {
-
+.links a:hover {
+    text-decoration: underline;
 }
-main h1 {
+
+/* FIRST DISPLAY start */
+
+.first_display {
+    display: flex;
+    flex-direction: column;
+    margin-top: 115px;
+    margin-left: 116px;
+    padding-bottom: 313px;
+    color: #FFF;
+}
+
+
+.firstLine {
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.first_display h1 {
+    font-family: Clicker Script;
+    font-size: 220px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.secondLine {
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 34px; /* 170% */
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.first_display button {
+    color: #1E1E1E;
     text-align: center;
+    /* font-family: Playfair Display; */
+
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    border: none;
+    border-radius: 24px;
+    background: #F9C06A;
+    box-shadow: 0px 6px 12px 0px rgba(249, 192, 106, 0.22);
+    cursor: pointer;
+    width: 141.259px;
+    height: 52.114px;
+    margin-top: 22px;
+}
+.first_display button:hover {
+    text-decoration: underline;
+}
+/* FIRST DISPLAY end */
+
+
+
+/* SECOND DISPLAY start */
+
+.second_display {
+
 }
 
+.side_text {
+    display: flex;
+    flex-direction: row;
+}
+
+.side_text h1 {
+    color: var(--coffee, #603809);
+    /* font-family: Playfair Display; */
+    font-size: 54px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.side_text p {
+    color: #707070;
+    /* font-family: Playfair Display; */
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 34px; /* 170% */
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.side_text button {
+    border-radius: 24px;
+    background: #F9C06A;
+    box-shadow: 0px 6px 12px 0px rgba(249, 192, 106, 0.22);
+    border: none;
+    color: #1E1E1E;
+    text-align: center;
+    /* font-family: Playfair Display; */
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    width: 140.643px;
+    height: 52.966px;
+    cursor: pointer;
+}
+
+.side_text button:hover {
+    text-decoration: underline;
+}
+
+/* SECOND DISPLAY start */
