--- a/web/public/style.css
+++ b/web/public/style.css
@@ -2,15 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap');
 
 *, *::after, *::before {
-    box-sizing: border-box  ;
+    box-sizing: border-box;
     font-family: Playfair Display;
-
 }
 
 body {
     height: 3120px;
     margin: 0;
-
 }
 .background-1 {
     background: linear-gradient(90deg, #1E1E1E 0%, rgba(0, 0, 0, 0.00) 60%),
@@ -20,7 +18,6 @@ body {
 header {
     display: flex;
     justify-content: space-between;
-
 }
 
 .wrap_header {
@@ -41,6 +38,7 @@ header .logo p {
     font-weight: 400;
     line-height: normal;
     text-align: center;
+    padding-bottom: 0px;
 }
 
 header .logo {
@@ -51,7 +49,6 @@ header .logo {
     margin-top: 48px;
     margin-right: 116px;
     white-space: nowrap;
-
 }
 
 .links a {
@@ -64,10 +61,14 @@ header .logo {
     font-weight: 500;
     line-height: normal;
     white-space: nowrap;
+
+    border-bottom: 1px solid transparent;
+    transition: all .2s ease-in;
 }
 
 .links a:hover {
-    text-decoration: underline;
+    border-bottom: 1.4px solid white
+    /* text-decoration: underline; */
 }
 
 /* FIRST DISPLAY start */
@@ -76,6 +77,7 @@ header .logo {
     display: flex;
     flex-direction: column;
     margin-top: 115px;
+    margin-right: 111px;
     margin-left: 116px;
     padding-bottom: 313px;
     color: #FFF;
@@ -127,9 +129,11 @@ header .logo {
     width: 141.259px;
     height: 52.114px;
     margin-top: 22px;
+
 }
 .first_display button:hover {
     text-decoration: underline;
+
 }
 /* FIRST DISPLAY end */
 
@@ -138,12 +142,39 @@ header .logo {
 /* SECOND DISPLAY start */
 
 .second_display {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0px auto;
+    margin-bottom: 79px;
+    margin-top: 28px;
+}
 
+@media (max-width: 1100px) {
+    .second_display {
+        flex-direction: column;
+
+    }
 }
 
 .side_text {
-    display: flex;
-    flex-direction: row;
+    flex: 1;
+    width: 50%;
+    flex-wrap: nowrap;
+
+}
+.side_text h1, p {
+    padding-bottom: 32px;
+}
+
+.image_container {
+    flex: 1;
+
+    width: 50%;
+}
+.image_container img {
+    width: 100%;
+    height: auto;
 }
 
 .side_text h1 {
@@ -189,4 +220,4 @@ header .logo {
     text-decoration: underline;
 }
 
-/* SECOND DISPLAY start */
+/* SECOND DISPLAY end */
