--- a/web/src/layouts/main.html
+++ b/web/src/layouts/main.html
@@ -13,9 +13,15 @@
       {{ template "navbar" }}
       {{ template "first_display" }}
     </div>
-    <section class="second_display">
-      {{ template "second_display" }}
+
+    <section>
+      {{ template "about_coffee"}}
     </section>
+
+    <section>
+      {{ template "enjoy_coffee"}}
+    </section>
+
     <footer>
       {{ template "footer" }}
     </footer>
